scss/_assets/_forms.scss
/**
 * Forms
 */

.form {
    text-align: center;
}

.input {
    display: inline-block;
    width: 250px;
    margin: 0 auto 50px;
    padding: 5px 5px 6px;
    color: #fff;
    font-size: 18px;
    font-weight: 300;
    text-align: center;
    border: 1px solid transparent;
    border-radius: 4px;

    @include breakpoint(bp2) {
        width: 160px;
    }
}

.input:focus {
    outline: none;
}

.input--preview {
    background-color: #402475;
    @include placeholder(#8262C0);
}

.input--preview:focus {
    border: 1px solid #1D0F38;
}

.input--outro {
    background-color: #D13031;
    @include placeholder(#FF8C8C);
}

.input--outro:focus {
    border: 1px solid #A62526;
}

.button {
    display: inline-block;
    padding: 5px 10px 6px;
    font-size: 18px;
    font-weight: 300;
    text-align: center;
    border: 1px solid transparent;
    border-radius: 4px;
}

.button:hover {
    cursor: pointer;
}

.button:active {
    position: relative;
    top: 1px;
}

.button--preview {
    color: #402475;
    background-color: #8262C0;
}

.button--outro {
    color: #D13031;
    background-color: #FF8C8C;
}

